Fix execution counts and update data quality checks in model training notebook

--- a/notebooks/03_model_training.ipynb
+++ b/notebooks/03_model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4e24e67f",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3a59299e",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dev dataframe successfully loaded with 7500 rows and 45 features\n",
+      "Dev dataframe successfully loaded with 7500 rows and 44 features\n",
       "Train dataframe successfully loaded with 35000 rows and 44 features\n"
      ]
     }
@@ -74,42 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1a08d622",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Unnamed: 0']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "missing_cols = [col for col in dev_df if col not in train_df]\n",
-    "missing_cols"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e73832bd",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The dataset must not contain null values",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 30\u001b[39m\n\u001b[32m     26\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mAll columns in the dataset must be numerical\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     28\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mAll validation passed!\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m \u001b[43mdata_quality_checks\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_df\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     31\u001b[39m data_quality_checks(dev_df)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 18\u001b[39m, in \u001b[36mdata_quality_checks\u001b[39m\u001b[34m(df)\u001b[39m\n\u001b[32m     16\u001b[39m missing = df.isnull().sum()\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(missing) == \u001b[32m0\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mThe dataset must not contain null values\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     20\u001b[39m n_duplicates = df[df.duplicated()].sum()\n\u001b[32m     21\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m n_duplicates != \u001b[32m0\u001b[39m:\n",
-      "\u001b[31mValueError\u001b[39m: The dataset must not contain null values"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All validation passed!\n",
+      "All validation passed!\n"
      ]
     }
    ],
@@ -129,11 +103,11 @@
     "            >>> data_quality_checks(df)\n",
     "    '''\n",
     "\n",
-    "    missing = df.isnull().sum()\n",
-    "    if not len(missing) == 0:\n",
+    "    missing = df.isnull().sum().sum()\n",
+    "    if missing:\n",
     "        raise ValueError(\"The dataset must not contain null values\")\n",
     "    \n",
-    "    n_duplicates = df[df.duplicated()].sum()\n",
+    "    n_duplicates = df[df.duplicated()].sum().sum()\n",
     "    if n_duplicates != 0:\n",
     "        raise ValueError(\"The dataset must not contain duplicate rows\")\n",
     "\n",
@@ -145,273 +119,6 @@
     "\n",
     "data_quality_checks(train_df)\n",
     "data_quality_checks(dev_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "16257222",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "0",
-         "rawType": "int64",
-         "type": "integer"
-        }
-       ],
-       "ref": "9abb3f21-75a4-4298-8955-68071132df77",
-       "rows": [
-        [
-         "Unnamed: 0",
-         "0"
-        ],
-        [
-         "Employee_age",
-         "0"
-        ],
-        [
-         "Current_Salary",
-         "0"
-        ],
-        [
-         "Number_of_Children",
-         "0"
-        ],
-        [
-         "years_experience",
-         "0"
-        ],
-        [
-         "past_projects",
-         "0"
-        ],
-        [
-         "current_projects",
-         "0"
-        ],
-        [
-         "performance_rating",
-         "0"
-        ],
-        [
-         "Job_Satisfaction",
-         "0"
-        ],
-        [
-         "Work_Life_Balance",
-         "0"
-        ],
-        [
-         "is_outlier",
-         "0"
-        ],
-        [
-         "Maritial_Status_True",
-         "0"
-        ],
-        [
-         "Divorced_earlier_Yes",
-         "0"
-        ],
-        [
-         "Father_alive_Yes",
-         "0"
-        ],
-        [
-         "Mother_alive_Yes",
-         "0"
-        ],
-        [
-         "Education_level_Diploma",
-         "0"
-        ],
-        [
-         "Education_level_High School",
-         "0"
-        ],
-        [
-         "Education_level_Master's",
-         "0"
-        ],
-        [
-         "Education_level_PhD",
-         "0"
-        ],
-        [
-         "Department_Finance",
-         "0"
-        ],
-        [
-         "Department_HR",
-         "0"
-        ],
-        [
-         "Department_Operations",
-         "0"
-        ],
-        [
-         "Department_R&D",
-         "0"
-        ],
-        [
-         "Department_Sales",
-         "0"
-        ],
-        [
-         "Department_Support",
-         "0"
-        ],
-        [
-         "Role_Analyst",
-         "0"
-        ],
-        [
-         "Role_Customer Specialist",
-         "0"
-        ],
-        [
-         "Role_DevOps Engineer",
-         "0"
-        ],
-        [
-         "Role_HR Executive",
-         "0"
-        ],
-        [
-         "Role_HR Manager",
-         "0"
-        ],
-        [
-         "Role_ML Engineer",
-         "0"
-        ],
-        [
-         "Role_Operations Coordinator",
-         "0"
-        ],
-        [
-         "Role_Ops Manager",
-         "0"
-        ],
-        [
-         "Role_Researcher",
-         "0"
-        ],
-        [
-         "Role_Sales Manager",
-         "0"
-        ],
-        [
-         "Role_Scientist",
-         "0"
-        ],
-        [
-         "Role_Senior Analyst",
-         "0"
-        ],
-        [
-         "Role_Software Engineer",
-         "0"
-        ],
-        [
-         "Role_Support Engineer",
-         "0"
-        ],
-        [
-         "Employee_age_log",
-         "0"
-        ],
-        [
-         "past_projects_log",
-         "0"
-        ],
-        [
-         "years_experience_log",
-         "0"
-        ],
-        [
-         "Job_Satisfaction_log",
-         "0"
-        ],
-        [
-         "Work_Life_Balance_log",
-         "0"
-        ],
-        [
-         "Current_Salary_log",
-         "0"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 45
-       }
-      },
-      "text/plain": [
-       "Unnamed: 0                     0\n",
-       "Employee_age                   0\n",
-       "Current_Salary                 0\n",
-       "Number_of_Children             0\n",
-       "years_experience               0\n",
-       "past_projects                  0\n",
-       "current_projects               0\n",
-       "performance_rating             0\n",
-       "Job_Satisfaction               0\n",
-       "Work_Life_Balance              0\n",
-       "is_outlier                     0\n",
-       "Maritial_Status_True           0\n",
-       "Divorced_earlier_Yes           0\n",
-       "Father_alive_Yes               0\n",
-       "Mother_alive_Yes               0\n",
-       "Education_level_Diploma        0\n",
-       "Education_level_High School    0\n",
-       "Education_level_Master's       0\n",
-       "Education_level_PhD            0\n",
-       "Department_Finance             0\n",
-       "Department_HR                  0\n",
-       "Department_Operations          0\n",
-       "Department_R&D                 0\n",
-       "Department_Sales               0\n",
-       "Department_Support             0\n",
-       "Role_Analyst                   0\n",
-       "Role_Customer Specialist       0\n",
-       "Role_DevOps Engineer           0\n",
-       "Role_HR Executive              0\n",
-       "Role_HR Manager                0\n",
-       "Role_ML Engineer               0\n",
-       "Role_Operations Coordinator    0\n",
-       "Role_Ops Manager               0\n",
-       "Role_Researcher                0\n",
-       "Role_Sales Manager             0\n",
-       "Role_Scientist                 0\n",
-       "Role_Senior Analyst            0\n",
-       "Role_Software Engineer         0\n",
-       "Role_Support Engineer          0\n",
-       "Employee_age_log               0\n",
-       "past_projects_log              0\n",
-       "years_experience_log           0\n",
-       "Job_Satisfaction_log           0\n",
-       "Work_Life_Balance_log          0\n",
-       "Current_Salary_log             0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dev_df.isnull().sum()"
    ]
   },
   {
@@ -463,6 +170,97 @@
     "\n",
     "x_train, y_train = features_target_split(train_df)\n",
     "x_dev, y_dev = features_target_split(dev_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00989889",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train:  (35000, 43)\n",
+      "x_dev: (7500, 43)\n",
+      "y_train: (35000,)\n",
+      "y_dev: (7500,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('x_train: ', x_train.shape)\n",
+    "print(f'x_dev: {x_dev.shape}')\n",
+    "print(f'y_train: {y_train.shape}')\n",
+    "print(f'y_dev: {y_dev.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "213537ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c3641b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV, KFold, cross_val_score, learning_curve\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "from lightgbm import LGBMRegressor\n",
+    "from sklearn.inspection import permutation_importance\n",
+    "from sklearn.metrics import mean_squared_error,mean_absolute_error,root_mean_squared_error,r2_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ebe138e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# baseline models - performing modelling with minimal feature engineering\n",
+    "models = {\n",
+    "    'Ridge' : Ridge(random_state=42),\n",
+    "    'RandomForest': RandomForestRegressor(n_estimators=200, max_depth=6, n_jobs=-1, random_state=1),\n",
+    "    'XGBoost': XGBRegressor(),\n",
+    "    'LightGBM': LGBMRegressor(random_state=2)\n",
+    "}\n",
+    "\n",
+    "for model_name, model in models.items():\n",
+    "    print(f'Training model: {model_name}...')\n",
+    "    start_time = time.time()\n",
+    "    model.fit(x_train, y_train)\n",
+    "\n",
+    "    time_elapsed = time.time() - start_time\n",
+    "\n",
+    "    preds_train = model.predict(x_train)\n",
+    "    # preds_dev = model.predict(x_dev)\n",
+    "\n",
+    "    results = {\n",
+    "        'Model_name' : model_name,\n",
+    "        'Mean_squared_error' : mean_squared_error(y_train, preds_train),\n",
+    "        'Root_mean_squared_error' : root_mean_squared_error(y_train, preds_train),\n",
+    "        'Mean_absolute_error' : mean_absolute_error(y_train, preds_train)\n",
+    "    }\n",
+    "    \n",
+    "    for name, result in results.items():\n",
+    "        print(f'{name} : {result}')\n",
+    "        \n",
+    "    print('='*50)"
    ]
   }
  ],
