Refactor data loading and quality check functions for improved clarity and error handling

--- a/notebooks/03_model_training.ipynb
+++ b/notebooks/03_model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4e24e67f",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3a59299e",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e73832bd",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "062b545b",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "00989889",
    "metadata": {},
    "outputs": [
@@ -198,17 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "213537ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4c3641b9",
    "metadata": {},
    "outputs": [],
@@ -227,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8ebe138e",
    "metadata": {},
    "outputs": [],
@@ -238,7 +228,58 @@
     "    'RandomForest': RandomForestRegressor(n_estimators=200, max_depth=6, n_jobs=-1, random_state=1),\n",
     "    'XGBoost': XGBRegressor(),\n",
     "    'LightGBM': LGBMRegressor(random_state=2)\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a4a974fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training model: Ridge...\n",
+      "Model_name_train : Ridge\n",
+      "Mean_squared_error_train : 177006236.93275234\n",
+      "Root_mean_squared_error_train : 13304.369091871751\n",
+      "Mean_absolute_error_train : 5950.650044137561\n",
+      "Time_elapsed_train : 0.04302263259887695\n",
+      "==================================================\n",
+      "Training model: RandomForest...\n",
+      "Model_name_train : RandomForest\n",
+      "Mean_squared_error_train : 374677.1392871908\n",
+      "Root_mean_squared_error_train : 612.1087642626846\n",
+      "Mean_absolute_error_train : 299.84564094744934\n",
+      "Time_elapsed_train : 39.75776767730713\n",
+      "==================================================\n",
+      "Training model: XGBoost...\n",
+      "Model_name_train : XGBoost\n",
+      "Mean_squared_error_train : 31568.296875\n",
+      "Root_mean_squared_error_train : 177.67469787597656\n",
+      "Mean_absolute_error_train : 100.116455078125\n",
+      "Time_elapsed_train : 1.7549805641174316\n",
+      "==================================================\n",
+      "Training model: LightGBM...\n",
+      "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.005956 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 1583\n",
+      "[LightGBM] [Info] Number of data points in the train set: 35000, number of used features: 42\n",
+      "[LightGBM] [Info] Start training from score 58335.359571\n",
+      "Model_name_train : LightGBM\n",
+      "Mean_squared_error_train : 15300556.94997373\n",
+      "Root_mean_squared_error_train : 3911.592635995437\n",
+      "Mean_absolute_error_train : 291.44503629623364\n",
+      "Time_elapsed_train : 6.062285423278809\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "for model_name, model in models.items():\n",
     "    print(f'Training model: {model_name}...')\n",
@@ -254,12 +295,68 @@
     "        'Model_name' : model_name,\n",
     "        'Mean_squared_error' : mean_squared_error(y_train, preds_train),\n",
     "        'Root_mean_squared_error' : root_mean_squared_error(y_train, preds_train),\n",
-    "        'Mean_absolute_error' : mean_absolute_error(y_train, preds_train)\n",
+    "        'Mean_absolute_error' : mean_absolute_error(y_train, preds_train),\n",
+    "        'Time_elapsed' : time_elapsed\n",
     "    }\n",
     "    \n",
     "    for name, result in results.items():\n",
-    "        print(f'{name} : {result}')\n",
+    "        print(f'{name}_train : {result}')\n",
     "        \n",
+    "    print('='*50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d3f4522c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model_name_train : Ridge\n",
+      "cv_score_across_fold_train : [13214.01516076 11546.08185647 14546.91316514 12515.08319543\n",
+      " 14545.629717  ]\n",
+      "cv_score_mean_train : 13273.544618960095\n",
+      "cv_score_std_train : 1166.4135659553087\n",
+      "==================================================\n",
+      "model_name_train : RandomForest\n",
+      "cv_score_across_fold_train : [631.03277737 819.79787692 757.55650098 574.76559407 682.24520977]\n",
+      "cv_score_mean_train : 693.0795918224054\n",
+      "cv_score_std_train : 87.38442501704962\n",
+      "==================================================\n",
+      "model_name_train : XGBoost\n",
+      "cv_score_across_fold_train : [9402.90039062 6235.70605469 8811.60839844 9500.25976562 9101.83203125]\n",
+      "cv_score_mean_train : 8610.461328125\n",
+      "cv_score_std_train : 1211.6987123585957\n",
+      "==================================================\n",
+      "model_name_train : LightGBM\n",
+      "cv_score_across_fold_train : [7905.2099425  6079.50476953 7564.06289146 5803.99762713 7063.48003909]\n",
+      "cv_score_mean_train : 6883.251053943197\n",
+      "cv_score_std_train : 818.6798231414747\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cross validation score \n",
+    "cv = KFold(n_splits=5, shuffle=True, random_state=9999)\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    cross_val = cross_val_score(model, x_train, y_train, cv=cv, scoring='neg_root_mean_squared_error', n_jobs=-1)\n",
+    "\n",
+    "    cv_score = -cross_val\n",
+    "    results = {\n",
+    "        'model_name' : name,\n",
+    "        'cv_score_across_fold' : cv_score,\n",
+    "        'cv_score_mean' : cv_score.mean(),\n",
+    "        'cv_score_std' : cv_score.std()\n",
+    "    }\n",
+    "\n",
+    "    for name, result in results.items():\n",
+    "        print(f'{name}_train : {result}')\n",
+    "\n",
     "    print('='*50)"
    ]
   }
