Car Price Prediction Model

--- a/notebooks/03_model_training.ipynb
+++ b/notebooks/03_model_training.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e73832bd",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
     "    if missing:\n",
     "        raise ValueError(\"The dataset must not contain null values\")\n",
     "    \n",
-    "    n_duplicates = df[df.duplicated()].sum().sum()\n",
+    "    n_duplicates = df.duplicated().sum()\n",
     "    if n_duplicates != 0:\n",
     "        raise ValueError(\"The dataset must not contain duplicate rows\")\n",
     "\n",
