Employee Salary Prediction Model

--- a/notebooks/03_model_training.ipynb
+++ b/notebooks/03_model_training.ipynb
@@ -24,8 +24,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dev dataframe successfully loaded with 7500 rows and 44 features\n",
-      "Train dataframe successfully loaded with 35000 rows and 44 features\n"
+      "Dev dataframe successfully loaded with 7500 rows and 38 features\n",
+      "Train dataframe successfully loaded with 35000 rows and 38 features\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e73832bd",
    "metadata": {},
    "outputs": [
@@ -123,13 +123,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "062b545b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# split the data further into features and target set\n",
-    "def features_target_split(df: pd.DataFrame, target: str = 'Current_Salary') -> Tuple[pd.DataFrame, pd.DataFrame]:\n",
+    "def features_target_split(df: pd.DataFrame, target: str = 'Current_Salary_log') -> Tuple[pd.DataFrame, pd.DataFrame]:\n",
     "    '''\n",
     "        Split the dataset further into features and target splits\n",
     "        \n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "00989889",
    "metadata": {},
    "outputs": [
@@ -182,8 +182,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_train:  (35000, 43)\n",
-      "x_dev: (7500, 43)\n",
+      "x_train:  (35000, 37)\n",
+      "x_dev: (7500, 37)\n",
       "y_train: (35000,)\n",
       "y_dev: (7500,)\n"
      ]
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4c3641b9",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8ebe138e",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "a4a974fe",
    "metadata": {},
    "outputs": [
@@ -243,38 +243,42 @@
      "text": [
       "Training model: Ridge...\n",
       "Model_name_train : Ridge\n",
-      "Mean_squared_error_train : 177006236.93275234\n",
-      "Root_mean_squared_error_train : 13304.369091871751\n",
-      "Mean_absolute_error_train : 5950.650044137561\n",
-      "Time_elapsed_train : 0.04302263259887695\n",
+      "Mean_squared_error_train : 0.16283124347425945\n",
+      "Root_mean_squared_error_train : 0.40352353521728995\n",
+      "Mean_absolute_error_train : 0.32872611281472097\n",
+      "R^2_score_train : 0.17412199234032788\n",
+      "Time_elapsed_train : 0.08465051651000977\n",
       "==================================================\n",
       "Training model: RandomForest...\n",
       "Model_name_train : RandomForest\n",
-      "Mean_squared_error_train : 374677.1392871908\n",
-      "Root_mean_squared_error_train : 612.1087642626846\n",
-      "Mean_absolute_error_train : 299.84564094744934\n",
-      "Time_elapsed_train : 39.75776767730713\n",
+      "Mean_squared_error_train : 0.15528384174018034\n",
+      "Root_mean_squared_error_train : 0.3940607081912384\n",
+      "Mean_absolute_error_train : 0.3210497567790834\n",
+      "R^2_score_train : 0.21240231848752567\n",
+      "Time_elapsed_train : 7.352097272872925\n",
       "==================================================\n",
       "Training model: XGBoost...\n",
       "Model_name_train : XGBoost\n",
-      "Mean_squared_error_train : 31568.296875\n",
-      "Root_mean_squared_error_train : 177.67469787597656\n",
-      "Mean_absolute_error_train : 100.116455078125\n",
-      "Time_elapsed_train : 1.7549805641174316\n",
+      "Mean_squared_error_train : 0.11535355970326377\n",
+      "Root_mean_squared_error_train : 0.339637394441872\n",
+      "Mean_absolute_error_train : 0.2736790933601069\n",
+      "R^2_score_train : 0.4149282040013249\n",
+      "Time_elapsed_train : 0.5313794612884521\n",
       "==================================================\n",
       "Training model: LightGBM...\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.005956 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.002118 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 1583\n",
-      "[LightGBM] [Info] Number of data points in the train set: 35000, number of used features: 42\n",
-      "[LightGBM] [Info] Start training from score 58335.359571\n",
+      "[LightGBM] [Info] Total Bins 699\n",
+      "[LightGBM] [Info] Number of data points in the train set: 35000, number of used features: 36\n",
+      "[LightGBM] [Info] Start training from score 10.869476\n",
       "Model_name_train : LightGBM\n",
-      "Mean_squared_error_train : 15300556.94997373\n",
-      "Root_mean_squared_error_train : 3911.592635995437\n",
-      "Mean_absolute_error_train : 291.44503629623364\n",
-      "Time_elapsed_train : 6.062285423278809\n",
+      "Mean_squared_error_train : 0.145926060828559\n",
+      "Root_mean_squared_error_train : 0.38200269741005627\n",
+      "Mean_absolute_error_train : 0.31069894027586226\n",
+      "R^2_score_train : 0.25986486492829686\n",
+      "Time_elapsed_train : 0.35014843940734863\n",
       "==================================================\n"
      ]
     }
@@ -296,6 +300,7 @@
     "        'Mean_squared_error' : mean_squared_error(y_train, preds_train),\n",
     "        'Root_mean_squared_error' : root_mean_squared_error(y_train, preds_train),\n",
     "        'Mean_absolute_error' : mean_absolute_error(y_train, preds_train),\n",
+    "        'R^2_score' : r2_score(y_train, preds_train),\n",
     "        'Time_elapsed' : time_elapsed\n",
     "    }\n",
     "    \n",
@@ -316,25 +321,24 @@
      "output_type": "stream",
      "text": [
       "model_name_train : Ridge\n",
-      "cv_score_across_fold_train : [13214.01516076 11546.08185647 14546.91316514 12515.08319543\n",
-      " 14545.629717  ]\n",
-      "cv_score_mean_train : 13273.544618960095\n",
-      "cv_score_std_train : 1166.4135659553087\n",
+      "cv_score_across_fold_train : [0.39983576 0.40352756 0.4079302  0.39962017 0.40844163]\n",
+      "cv_score_mean_train : 0.4038710646820033\n",
+      "cv_score_std_train : 0.003790474777318751\n",
       "==================================================\n",
       "model_name_train : RandomForest\n",
-      "cv_score_across_fold_train : [631.03277737 819.79787692 757.55650098 574.76559407 682.24520977]\n",
-      "cv_score_mean_train : 693.0795918224054\n",
-      "cv_score_std_train : 87.38442501704962\n",
+      "cv_score_across_fold_train : [0.39590508 0.39885779 0.40323224 0.39622974 0.40148317]\n",
+      "cv_score_mean_train : 0.39914160312663644\n",
+      "cv_score_std_train : 0.0028723109580029048\n",
       "==================================================\n",
       "model_name_train : XGBoost\n",
-      "cv_score_across_fold_train : [9402.90039062 6235.70605469 8811.60839844 9500.25976562 9101.83203125]\n",
-      "cv_score_mean_train : 8610.461328125\n",
-      "cv_score_std_train : 1211.6987123585957\n",
+      "cv_score_across_fold_train : [0.41266127 0.41454421 0.41647405 0.40909424 0.41444227]\n",
+      "cv_score_mean_train : 0.41344321057272293\n",
+      "cv_score_std_train : 0.002486816634741162\n",
       "==================================================\n",
       "model_name_train : LightGBM\n",
-      "cv_score_across_fold_train : [7905.2099425  6079.50476953 7564.06289146 5803.99762713 7063.48003909]\n",
-      "cv_score_mean_train : 6883.251053943197\n",
-      "cv_score_std_train : 818.6798231414747\n",
+      "cv_score_across_fold_train : [0.39739636 0.40098042 0.4046927  0.39749862 0.40325354]\n",
+      "cv_score_mean_train : 0.4007643259620644\n",
+      "cv_score_std_train : 0.002955773327812163\n",
       "==================================================\n"
      ]
     }
